crates/phoenix-ir/src/snapshots/phoenix_ir__tests__lower_unary_not.snap
---
source: crates/phoenix-ir/src/tests.rs
expression: ir
---
func @main() -> bool {
  bb0:
    v0 = const_bool true
    v1 = bool_not v0
    return v1
}
