crates/phoenix-ir/src/snapshots/phoenix_ir__tests__lower_user_method_call.snap
---
source: crates/phoenix-ir/src/tests.rs
expression: ir
---
func @main() -> i64 {
  bb0:
    v0 = const_i64 42
    v1 = struct_alloc @Counter(v0)
    v2 = call f1(v1)
    return v2
}

func @Counter.get(self: struct.Counter) -> i64 {
  bb0(v0: struct.Counter):
    v1 = struct_get_field v0, 0
    return v1
}
