crates/phoenix-ir/src/snapshots/phoenix_ir__tests__lower_variable_shadowing.snap
---
source: crates/phoenix-ir/src/tests.rs
expression: ir
---
func @main() -> i64 {
  bb0:
    v0 = const_i64 10
    v1 = const_bool true
    branch v1, bb1, bb2
  bb1:
    v2 = const_i64 20
    v3 = builtin_call @toString(v2)
    builtin_call @print(v3)
    jump bb2
  bb2:
    return v0
}
