crates/phoenix-ir/src/snapshots/phoenix_ir__tests__lower_while_with_else.snap
---
source: crates/phoenix-ir/src/tests.rs
expression: ir
---
func @main() -> void {
  bb0:
    v0 = const_i64 0
    v1 = alloca i64
    store v1, v0
    jump bb1
  bb1:
    v2 = load v1
    v3 = const_i64 3
    v4 = ilt v2, v3
    branch v4, bb2, bb4
  bb2:
    v5 = load v1
    v6 = const_i64 1
    v7 = iadd v5, v6
    store v1, v7
    jump bb1
  bb3:
    jump bb5
  bb4:
    v8 = const_string "done"
    builtin_call @print(v8)
    jump bb5
  bb5:
    return
}
